src/test/deca/syntax/invalid/lexer/test_ident_special_caractere.deca
// Description:
//    test de programme incorrect lexicalement (IDENT commence avec caractere special qui n'est pas un token)
//    test equivalent si caractere special a la fin ou au sein de l'ident 
//
// Resultats:
//    ligne 10 : Erreur, il faut "E" ou "e"
//
// Historique:
//    cree le 05/01/2023

&abc